# band-name-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: BAND-NAME-GENERATOR.md  BOILERPLATE-README.md  PROJECT-STRUCTURE.md  PYTHON-BOILERPLATE-INDEX.md  UV-RUST-STANDARD.md
scripts/: band-name-gen.py  run-tests.sh  setup-ev.sh  setup-python-uv-modern.sh  setup-python-uv.sh
src/band_name_generator/: __init__.py  __main__.py  cli.py  generator.py  patterns.py  word_fetcher.py
templates/: .gitignore.python.template  Makefile.modern.template  Makefile.template  pyproject.toml.template
tests/: test_example.py  test_generator.py  test_patterns.py  test_word_fetcher.py
